--- a/config/iOS/xcconfig/Adhoc.xcconfig
+++ b/config/iOS/xcconfig/Adhoc.xcconfig
@@ -21,3 +21,5 @@ AS_APP_NAME = Base-ios Adhoc
 AS_APP_ICON = AppIcon Adhoc
 /// ProjectEnvironment
 AS_APP_ENVIRONMENT = Adhoc
+
+OTHER_SWIFT_FLAGS = -D ENDPOINT_ADHOC
