--- a/config/iOS/xcconfig/Release.xcconfig
+++ b/config/iOS/xcconfig/Release.xcconfig
@@ -21,3 +21,5 @@ AS_APP_NAME = Base-ios
 AS_APP_ICON = AppIcon Release
 /// ProjectEnvironment
 AS_APP_ENVIRONMENT = Release
+
+OTHER_SWIFT_FLAGS = -D ENDPOINT_RELEASE
